crates/ruff/tests/cli/snapshots/cli__lint__output_format_preview_rdjson.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: buff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - rdjson
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - "--preview"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
{
  "diagnostics": [
    {
      "code": {
        "url": "https://kotlinisland.github.io/basedpython/rules/unused-import",
        "value": "unused-import"
      },
      "location": {
        "path": "[TMP]/input.py",
        "range": {
          "end": {
            "column": 10,
            "line": 1
          },
          "start": {
            "column": 8,
            "line": 1
          }
        }
      },
      "message": "`os` imported but unused",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 1,
              "line": 2
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://kotlinisland.github.io/basedpython/rules/undefined-name",
        "value": "undefined-name"
      },
      "location": {
        "path": "[TMP]/input.py",
        "range": {
          "end": {
            "column": 6,
            "line": 2
          },
          "start": {
            "column": 5,
            "line": 2
          }
        }
      },
      "message": "Undefined name `y`"
    },
    {
      "code": {
        "value": "invalid-syntax"
      },
      "location": {
        "path": "[TMP]/input.py",
        "range": {
          "end": {
            "column": 6,
            "line": 3
          },
          "start": {
            "column": 1,
            "line": 3
          }
        }
      },
      "message": "Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)"
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "ruff",
    "url": "https://kotlinisland.github.io/basedpython"
  }
}
----- stderr -----
