crates/ruff/tests/cli/snapshots/cli__lint__required_import_set_conflicts_with_pyi025.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: buff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--config"
    - "lint.isort.required-imports = [\"from collections.abc import Set\"]"
    - "--select"
    - "I002,PYI025"
    - "-"
  stdin: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ruff failed
  Cause: Failed to parse /Users/morgan/projects/basedpython/.claude/worktrees/merge-upstream-804c57/pyproject.toml
  Cause: TOML parse error at line 88, column 1
   |
88 | docs = [
   | ^^^^
duplicate key
