crates/ruff/tests/cli/snapshots/cli__lint__required_import_set_without_pyi025_no_conflict.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: buff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--config"
    - "lint.isort.required-imports = [\"from collections.abc import Set\"]"
    - "--select"
    - I002
    - "-"
  stdin: "1"
---
success: false
exit_code: 1
----- stdout -----
-:1:1: I002 [*] Missing required import: `from collections.abc import Set`
Found 1 error.
[*] 1 fixable with the `--fix` option.

----- stderr -----
